--- a/XilinxProcessorIPLib/drivers/v_multi_scaler/examples/index.html
+++ b/XilinxProcessorIPLib/drivers/v_multi_scaler/examples/index.html
@@ -10,7 +10,7 @@
 <h1> Example Applications for the driver v_multi_scaler_v1_0 </h1>
 <HR>
 <ul>
-  <li>src/xmulti_scaler_example.c <a href="xmulti_scaler_example.c">(source)</a> </li>
+  <li>xv_multi_scaler_example.c <a href="xv_multi_scaler_example.c">(source)</a> </li>
 </ul>
 <p><font face="Times New Roman" color="#800000">Copyright © 1995-2018 Xilinx, Inc. All rights reserved.</font></p>
 </body>
